--- a/index.html
+++ b/index.html
@@ -4,9 +4,61 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Buy rain jackets at RainyDays" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Estonia&family=Roboto+Slab&family=Roboto:ital@1&display=swap" rel="stylesheet" />
+    <title>RainyDays | Homepage</title>
   </head>
   <body>
-    <p>hello <strong>world</strong></p>
+    <header>
+      <a href="index.html" class="logo logo-header">Rainy days</a>
+      <i class="fas fa-shopping-cart fa-2x shopping-cart"></i>
+      <label for="hamburger-menu"><i class="fas fa-bars fa-2x hamburger"></i></label>
+      <input type="checkbox" id="hamburger-menu" />
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="collection.html">Collection</a>
+        <a href="contactus.html">Contact us</a>
+        <a href="aboutus.html">About us</a>
+      </nav>
+    </header>
+    <main>
+      <div class="social-media">
+        <h2 class="social-media__h2">Follow us</h2>
+        <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x"></i></a>
+        <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
+      </div>
+      <section class="intro">
+        <div class="intro__content">
+          <a href="index.html" class="logo">Rainy days</a>
+          <p>The Rainy season is here! Order a jacket now and get Free shipping</p>
+          <a href="collection.html" class="cta"> view collection</a>
+        </div>
+      </section>
+      <section>
+        <div>
+          <h2>the offpist jacket is here</h2>
+          <a href="collection">
+            <span>
+              <img src="images/brown-jacket-square.jpg" alt="man wearing the offpistjacket outside" />
+              <p>offpist jacket</p>
+              <p>99 eur</p>
+            </span>
+          </a>
+        </div>
+        <div>
+          <img src="images/texture.jpg" alt="texture picture of a waterproof rainy days jacket" />
+          <h1>100% waterproof</h1>
+          <p>All Our RainyDays jackets comes with a 100% waterproof warranty! So you can be comfortable and focus on enjoying your adventures</p>
+          <a href="collection.html"> view collection</a>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <a href="index.html" class="logo">Rainy days</a>
+      copyright &copy;
+    </footer>
   </body>
 </html>
