--- a/index.html
+++ b/index.html
@@ -24,41 +24,38 @@
       </nav>
     </header>
     <main>
-      <div class="social-media">
+      <section class="social-media">
         <h2 class="social-media__h2">Follow us</h2>
-        <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x"></i></a>
+        <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x facebook"></i></a>
         <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
         <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
-      </div>
+      </section>
       <section class="intro">
         <div class="intro__content">
           <a href="index.html" class="logo">Rainy days</a>
-          <p>The Rainy season is here! Order a jacket now and get Free shipping</p>
+          <p>The Rainy season is here! Order a jacket now and get free shipping</p>
           <a href="collection.html" class="cta"> view collection</a>
         </div>
       </section>
-      <section>
-        <div>
-          <h2>the offpist jacket is here</h2>
+      <section class="home-featured">
+        <div class="featured">
           <a href="collection">
             <span>
-              <img src="images/brown-jacket-square.jpg" alt="man wearing the offpistjacket outside" />
-              <p>offpist jacket</p>
+              <h2>the offpist jacket is here</h2>
+              <img src="images/brown-jacket-product.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
+              <p>Offpist jacket</p>
               <p>99 eur</p>
             </span>
           </a>
         </div>
-        <div>
-          <img src="images/texture.jpg" alt="texture picture of a waterproof rainy days jacket" />
-          <h1>100% waterproof</h1>
-          <p>All Our RainyDays jackets comes with a 100% waterproof warranty! So you can be comfortable and focus on enjoying your adventures</p>
-          <a href="collection.html"> view collection</a>
+        <div class="waterproof">
+          <img src="images/texture.jpg" class="waterproof__img" alt="texture picture of a waterproof rainy days jacket" />
+          <h2>100% waterproof</h2>
+          <p>All Our RainyDays jackets comes with a <span class="waterproof__waterproof">100% waterproof</span> warranty! So you can be comfortable and focus on enjoying your adventures</p>
+          <a href="collection.html" class="cta"> view collection</a>
         </div>
       </section>
     </main>
-    <footer>
-      <a href="index.html" class="logo">Rainy days</a>
-      copyright &copy;
-    </footer>
+    <footer>copyright &copy;</footer>
   </body>
 </html>
