--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Buy rain jackets at RainyDays" />
+    <meta name="description" content="get comfortable with the rain jackets at RainyDays" />
     <link href="css/styles.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Estonia&family=Roboto+Slab&family=Roboto:ital@1&display=swap" rel="stylesheet" />
@@ -12,24 +12,26 @@
   </head>
   <body>
     <header>
-      <a href="index.html" class="logo logo-header">Rainy days</a>
-      <i class="fas fa-shopping-cart fa-2x shopping-cart"></i>
-      <label for="hamburger-menu"><i class="fas fa-bars fa-2x hamburger"></i></label>
-      <input type="checkbox" id="hamburger-menu" />
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="collection.html">Collection</a>
-        <a href="contactus.html">Contact us</a>
-        <a href="aboutus.html">About us</a>
-      </nav>
-    </header>
-    <main>
-      <section class="social-media">
-        <h2 class="social-media__h2">Follow us</h2>
+      <div class="header-top">
+        <a href="index.html" class="logo logo-header">Rainy days</a>
+        <i class="fas fa-shopping-cart fa-2x shopping-cart"></i>
+        <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
+        <input type="checkbox" id="hamburger-menu" />
+        <nav>
+          <a href="index.html" class="current">Home</a>
+          <a href="collection.html">Collection</a>
+          <a href="contactus.html">Contact us</a>
+          <a href="aboutus.html">About us</a>
+        </nav>
+      </div>
+      <div class="social-media">
+        <h1 class="social-media__h2">Follow us</h1>
         <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x facebook"></i></a>
         <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
         <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
-      </section>
+      </div>
+    </header>
+    <main>
       <section class="intro">
         <div class="intro__content">
           <a href="index.html" class="logo">Rainy days</a>
