--- a/index.html
+++ b/index.html
@@ -24,11 +24,21 @@
           <a href="aboutus.html">About us</a>
         </nav>
       </div>
-      <div class="social-media">
-        <h1 class="social-media__h2">Follow us</h1>
-        <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x facebook"></i></a>
-        <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
-        <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
+      <div class="header-bottom">
+        <div class="search-bar">
+          <label for="search-icon"> <i class="fas fa-search fa-2x search-icon"></i></label>
+          <input type="checkbox" id="search-icon" />
+          <form method="post" class="search">
+            <input type="search" id="site-search" name="search" class="search-box" aria-label="search trough site content" />
+            <button class="search-button">Search</button>
+          </form>
+        </div>
+        <div class="social-media">
+          <h1 class="social-media__h2">Follow us</h1>
+          <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x facebook"></i></a>
+          <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
+        </div>
       </div>
     </header>
     <main>
