made some semantic changes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="waterproof">
           <img src="images/texture.jpg" class="waterproof__img" alt="texture picture of a waterproof rainy days jacket" />
           <h2>100% waterproof</h2>
-          <p>All Our RainyDays jackets comes with a <span class="waterproof__waterproof">100% waterproof</span> warranty! So you can be comfortable and focus on enjoying your adventures</p>
+          <p>All Our RainyDays jackets comes with a <span class="waterproof__bold-text">100% waterproof</span> warranty! So you can be comfortable and focus on enjoying your adventures</p>
           <a href="collection.html" class="cta"> view collection</a>
         </div>
       </section>
