added  collection page and some css
made the collection page. and  made my css into several css files.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="get comfortable with the rain jackets at RainyDays" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
+    <link href="css/imports/media.css" rel="stylesheet" />
+    <link href="css/imports/variables.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Estonia&family=Roboto+Slab&family=Roboto:ital@1&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <title>RainyDays | Homepage</title>
   </head>
   <body>
     <header>
       <div class="header-top">
         <a href="index.html" class="logo logo-header">Rainy days</a>
-        <i class="fas fa-shopping-cart fa-2x shopping-cart"></i>
+        <a href="collection.html" class="shopping-cart"><i class="fas fa-shopping-cart fa-2x"></i></a>
         <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
@@ -34,7 +38,7 @@
           </form>
         </div>
         <div class="social-media">
-          <h1 class="social-media__h2">Follow us</h1>
+          <h1 class="social-media__h2">Follow us:</h1>
           <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x facebook"></i></a>
           <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
           <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
@@ -44,8 +48,8 @@
     <main>
       <section class="intro">
         <div class="intro__content">
-          <a href="index.html" class="logo">Rainy days</a>
-          <p>The Rainy season is here! Order a jacket now and get free shipping</p>
+          <a href="index.html" class="logo logo-intro">Rainy days</a>
+          <h2>The Rainy season is here! Order a jacket now and get free shipping</h2>
           <a href="collection.html" class="cta"> view collection</a>
         </div>
       </section>
