added some sites

--- a/about.html
+++ b/about.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="get comfortable with the rain jackets at RainyDays" />
+    <meta name="description" content="Information about RainyDays" />
     <link href="css/styles.css" rel="stylesheet" />
-    <link href="css/index.css" rel="stylesheet" />
+    <link href="css/about.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-    <title>RainyDays | Homepage</title>
+    <title>RainyDays | About us</title>
   </head>
   <body>
     <header>
@@ -21,10 +21,10 @@
         <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
-          <a href="index.html" class="current">Home</a>
+          <a href="index.html">Home</a>
           <a href="collection.html">Collection</a>
           <a href="contact.html">Contact us</a>
-          <a href="about.html">About us</a>
+          <a href="about.html" class="current">About us</a>
         </nav>
       </div>
       <div class="header-bottom">
@@ -44,29 +44,13 @@
         </div>
       </div>
     </header>
-    <main>
-      <section class="intro">
-        <div class="intro__content">
-          <a href="index.html" class="logo logo-intro">Rainy days</a>
-          <h2>The Rainy season is here! Order a jacket now and get free shipping</h2>
-          <a href="collection.html" class="cta"> view collection</a>
-        </div>
-      </section>
-      <section class="home-featured">
-        <div class="featured">
-          <a href="products/offpist.html">
-            <h2>the offpist jacket is here</h2>
-            <img src="images/brown-jacket-product.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
-            <p>Offpist jacket</p>
-            <p>99 eur</p>
-          </a>
-        </div>
-        <div class="waterproof">
-          <img src="images/texture.jpg" class="waterproof__img" alt="texture picture of a waterproof rainy days jacket" />
-          <h2>100% waterproof</h2>
-          <p>All Our RainyDays jackets comes with a <span class="bold-text">100% waterproof</span> warranty! So you can be comfortable and focus on enjoying your adventures</p>
-          <a href="collection.html" class="cta"> view collection</a>
-        </div>
+    <main class="about">
+      <section class="about__content">
+        <h1>about rainydays:</h1>
+        <p>RainyDays is a small company founded by the adventurous,with a dream of having a jacket that is comfortable, durable, and can keep them dry and warm in any adventures to come</p>
+        <p>In RainyDays our motto is pushing the Comfort zone! We strive to make the best outdoor jackets for you.</p>
+        <p>All our jackets are 100% waterproof</p>
+        <p>Our Companys goal is that you can take one of our jackets, and head outside without giving the weather a tougth!</p>
       </section>
     </main>
     <footer>copyright &copy;</footer>
