--- a/collection.html
+++ b/collection.html
@@ -7,8 +7,7 @@
     <meta name="description" content="View our collection of comfortable rain jackets" />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/collection.css" rel="stylesheet" />
-    <link href="css/imports/media.css" rel="stylesheet" />
-    <link href="css/imports/variables.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
@@ -18,14 +17,14 @@
     <header>
       <div class="header-top">
         <a href="index.html" class="logo logo-header">Rainy days</a>
-        <a href="collection.html" class="shopping-cart"><i class="fas fa-shopping-cart fa-2x"></i></a>
+        <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart fa-2x"></i></a>
         <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
           <a href="index.html">Home</a>
           <a href="collection.html" class="current">Collection</a>
-          <a href="contactus.html">Contact us</a>
-          <a href="aboutus.html">About us</a>
+          <a href="contact.html">Contact us</a>
+          <a href="about.html">About us</a>
         </nav>
       </div>
       <div class="header-bottom">
@@ -33,12 +32,12 @@
           <label for="search-icon"> <i class="fas fa-search fa-2x search-icon"></i></label>
           <input type="checkbox" id="search-icon" />
           <form method="post" class="search">
-            <input type="search" id="site-search" name="search" class="search-box" aria-label="search trough site content" />
+            <input type="search" id="site-search" name="search" class="search-box border" aria-label="search trough site content" />
             <button class="search-button">Search</button>
           </form>
         </div>
         <div class="social-media">
-          <h1 class="social-media__h2">Follow us:</h1>
+          <h2>Follow us:</h2>
           <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x facebook"></i></a>
           <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
           <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
@@ -51,12 +50,12 @@
           <h1>our collection:</h1>
           <p>
             At RainyDays we strive to make the best outdoor jackets out there!Our jackets are designed and crafted with great care, to be
-            <span class="selling-points">comfortable,durable and dry</span>. so you can focus on yourself, and not the weather!
+            <span class="bold-text">comfortable,durable and dry</span>. so you can focus on yourself, and not the weather!
           </p>
         </div>
         <section class="products">
           <div class="featured featured__products">
-            <a href="collection">
+            <a href="products/offpist.html">
               <img src="images/brown-jacket-product.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
               <h2>Offpist jacket</h2>
               <p>99 eur</p>
