--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="get comfortable with the rain jackets at RainyDays" />
+    <meta name="description" content="contact us at RainyDays" />
     <link href="css/styles.css" rel="stylesheet" />
-    <link href="css/index.css" rel="stylesheet" />
+    <link href="css/contact.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-    <title>RainyDays | Homepage</title>
+    <title>RainyDays | Contact us</title>
   </head>
   <body>
     <header>
@@ -21,9 +21,9 @@
         <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
-          <a href="index.html" class="current">Home</a>
+          <a href="index.html">Home</a>
           <a href="collection.html">Collection</a>
-          <a href="contact.html">Contact us</a>
+          <a href="contact.html" class="current">Contact us</a>
           <a href="about.html">About us</a>
         </nav>
       </div>
@@ -32,7 +32,7 @@
           <label for="search-icon"> <i class="fas fa-search fa-2x search-icon"></i></label>
           <input type="checkbox" id="search-icon" />
           <form method="post" class="search">
-            <input type="search" id="site-search" name="search" class="search-box" aria-label="search trough site content" />
+            <input type="search" id="site-search" name="search" class="search-box border" aria-label="search trough site content" />
             <button class="search-button">Search</button>
           </form>
         </div>
@@ -45,27 +45,31 @@
       </div>
     </header>
     <main>
-      <section class="intro">
-        <div class="intro__content">
-          <a href="index.html" class="logo logo-intro">Rainy days</a>
-          <h2>The Rainy season is here! Order a jacket now and get free shipping</h2>
-          <a href="collection.html" class="cta"> view collection</a>
+      <div class="heading">
+        <h1>contact us</h1>
+      </div>
+      <section class="contact">
+        <div class="message">
+          <h2>Send us a direct message!</h2>
+          <form method="post">
+            <label for="email">Your email</label>
+            <input type="email" id="email" name="email" required />
+            <label form="message">Your message</label>
+            <textarea id="message" name="message"></textarea>
+            <input type="submit" value="send" class="cta cta-form" />
+          </form>
         </div>
-      </section>
-      <section class="home-featured">
-        <div class="featured">
-          <a href="products/offpist.html">
-            <h2>the offpist jacket is here</h2>
-            <img src="images/brown-jacket-product.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
-            <p>Offpist jacket</p>
-            <p>99 eur</p>
-          </a>
-        </div>
-        <div class="waterproof">
-          <img src="images/texture.jpg" class="waterproof__img" alt="texture picture of a waterproof rainy days jacket" />
-          <h2>100% waterproof</h2>
-          <p>All Our RainyDays jackets comes with a <span class="bold-text">100% waterproof</span> warranty! So you can be comfortable and focus on enjoying your adventures</p>
-          <a href="collection.html" class="cta"> view collection</a>
+        <div class="contact-info">
+          <h3>contact us by phone:</h3>
+          <div class="contact-info__content">
+            <i class="fas fa-phone-alt"></i>
+            <p>:+47 990-00-990</p>
+          </div>
+          <h3>contact us by mail:</h3>
+          <div class="contact-info__content">
+            <i class="fas fa-envelope"></i>
+            <p>:RainyDays@gmail.com</p>
+          </div>
         </div>
       </section>
     </main>
