cleaned up my css

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
           <form method="post">
             <label for="email">Your email</label>
             <input type="email" id="email" name="email" required />
-            <label form="message">Your message</label>
+            <label for="message">Your message</label>
             <textarea id="message" name="message"></textarea>
             <input type="submit" value="send" class="cta cta-form" />
           </form>
@@ -62,12 +62,12 @@
         <div class="contact-info">
           <h3>contact us by phone:</h3>
           <div class="contact-info__content">
-            <i class="fas fa-phone-alt"></i>
+            <i class="fas fa-phone-alt blue-i"></i>
             <p>:+47 990-00-990</p>
           </div>
           <h3>contact us by mail:</h3>
           <div class="contact-info__content">
-            <i class="fas fa-envelope"></i>
+            <i class="fas fa-envelope blue-i"></i>
             <p>:RainyDays@gmail.com</p>
           </div>
         </div>
