--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -80,7 +80,7 @@
         </form>
         <div class="remove">
           <p>remove</p>
-          <i class="fas fa-trash-alt fa-2x"></i>
+          <i class="fas fa-trash-alt blue-i fa-2x trashcan"></i>
         </div>
         <div class="shipment-info">
           <p>Shippment: 3-5 working days</p>
