--- a/checkout.html
+++ b/checkout.html
@@ -56,7 +56,7 @@
           </div>
           <div class="remove">
             <p>remove</p>
-            <i class="fas fa-trash-alt fa-2x"></i>
+            <i class="fas fa-trash-alt blue-i fa-2x"></i>
           </div>
           <div class="shipment-info">
             <p>Shippment: 3-5 working days</p>
