--- a/checkout.html
+++ b/checkout.html
@@ -45,10 +45,13 @@
       </div>
     </header>
     <main>
+      <h1>checkout</h1>
       <section class="checkout">
         <section class="shoppingcart-content content-square">
           <div class="shoppingcart-content__product">
-            <img src="images/brown-jacket-square.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
+            <div>
+              <img src="images/brown-jacket-square.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
+            </div>
             <div>
               <h2>Offpist jacket</h2>
               <p>99 eur</p>
