--- a/products/offpist.html
+++ b/products/offpist.html
@@ -45,15 +45,20 @@
       </div>
     </header>
     <main class="product-specific content-square">
-      <section>
+       <section>
         <img src="../images/brown-jacket-square.jpg" alt="man wearing the offpist jacket outside" />
         <div class="product-image_thumbnails">
-          <img src="../images/brown-jacket-square.jpg" alt="man wearing the offpist jacket outside" />
-          <img src="../images/brown-jacket-square.jpg" alt="man wearing the offpist jacket outside" />
-          <img src="../images/brown-jacket-square.jpg" alt="man wearing the offpist jacket outside" />
-        </div>
-      </section>
-      <section class="product-specific__details">
+          <div>
+            <img src="../images/brown-jacket-square.jpg" alt="man wearing the offpist jacket outside" />
+          </div>
+          <div>
+            <img src="../images/brown-jacket-square.jpg" alt="man wearing the offpist jacket outside" />
+          </div>
+          <div>
+            <img src="../images/brown-jacket-square.jpg" alt="man wearing the offpist jacket outside" />
+          </div>
+       </section>
+        <section class="product-specific__details">
         <h1>RainyDays offpist jacket</h1>
         <ul>
           <li>waterproof</li>
