--- a/purchase-complete.html
+++ b/purchase-complete.html
@@ -58,7 +58,7 @@
           <p>Omlevegen 31</p>
           <p>8661 Mosjøen</p>
           <p>Norway</p>
-          <p class="bold-text">Billing adress</p>
+          <p class="bold-text">Billing adress:</p>
           <p>Lars Hansen</p>
           <p>Omlevegen 31</p>
           <p>8661 Mosjøen</p>
@@ -66,7 +66,9 @@
         </section>
         <section class="shoppingcart-content content-square reciet">
           <div class="shoppingcart-content__product">
-            <img src="images/brown-jacket-square.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
+            <div>
+              <img src="images/brown-jacket-square.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
+            </div>
             <div>
               <h2>Offpist jacket</h2>
               <p>99 eur</p>
@@ -74,22 +76,24 @@
               <p>quantity:1</p>
             </div>
           </div>
-          <div class="shipment-info">
-            <p>Shippment: 3-5 working days</p>
-            <p>Payment: An innvoice will be delivered</p>
-          </div>
-          <section class="cost">
-            <div class="cost-info">
-              <p>Sub total:</p>
-              <p>99 eur</p>
+          <section>
+            <div class="shipment-info">
+              <p>Shippment: 3-5 working days</p>
+              <p>Payment: An innvoice will be delivered</p>
             </div>
-            <div class="cost-info">
-              <p>Shipping:</p>
-              <p>0 eur</p>
-            </div>
-            <div class="cost-info">
-              <p>Grand total:</p>
-              <p>99 eur</p>
+            <div class="cost">
+              <div class="cost-info">
+                <p>Sub total:</p>
+                <p>99 eur</p>
+              </div>
+              <div class="cost-info">
+                <p>Shipping:</p>
+                <p>0 eur</p>
+              </div>
+              <div class="cost-info">
+                <p>Grand total:</p>
+                <p>99 eur</p>
+              </div>
             </div>
           </section>
         </section>
