--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -51,7 +51,9 @@
       </div>
       <section class="shoppingcart-content content-square">
         <div class="shoppingcart-content__product">
-          <img src="images/brown-jacket-square.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
+          <div>
+            <img src="images/brown-jacket-square.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
+          </div>
           <div>
             <h2>Offpist jacket</h2>
             <p>99 eur</p>
