--- a/products/offpist.html
+++ b/products/offpist.html
@@ -21,8 +21,8 @@
         <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
-          <a href="../index.html" class="current">Home</a>
-          <a href="../collection.html">Collection</a>
+          <a href="../index.html" >Home</a>
+          <a href="../collection.html"class="current">Collection</a>
           <a href="../contact.html">Contact us</a>
           <a href="../about.html">About us</a>
         </nav>
