--- a/collection.html
+++ b/collection.html
@@ -62,35 +62,35 @@
             </a>
           </div>
           <div class="featured featured__products">
-            <a href="collection">
+            <a href="products/offpist.html">
               <img src="images/mountain-jacket.jpg" class="featured__img" alt="woman wearing the mountain jacket outside" />
               <h2>mountain jacket</h2>
               <p>99 eur</p>
             </a>
           </div>
           <div class="featured featured__products">
-            <a href="collection">
+            <a href="products/offpist.html">
               <img src="images/winter.jacket.jpg" class="featured__img" alt="woman wearing the winter jacket outside in the snow" />
               <h2>winter jacket</h2>
               <p>99 eur</p>
             </a>
           </div>
           <div class="featured featured__products">
-            <a href="collection">
+            <a href="products/offpist.html">
               <img src="images/light-jacket.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
               <h2>light jacket</h2>
               <p>99 eur</p>
             </a>
           </div>
           <div class="featured featured__products">
-            <a href="collection">
+            <a href="products/offpist.html">
               <img src="images/yellow-jacket-jpg.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
               <h2>urban jacket</h2>
               <p>99 eur</p>
             </a>
           </div>
           <div class="featured featured__products">
-            <a href="collection">
+            <a href="products/offpist.html">
               <img src="images/kids-jacket.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
               <h2>kids jacket</h2>
               <p>49 eur</p>
