--- a/about.html
+++ b/about.html
@@ -11,6 +11,23 @@
     <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <!-- Hotjar Tracking Code for https://elaborate-platypus-596ec8.netlify.app/index.html -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 3252744, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
+
     <title>RainyDays | About us</title>
   </head>
   <body>
@@ -47,7 +64,10 @@
     <main class="about">
       <section class="about__content">
         <h1>about rainydays:</h1>
-        <p>RainyDays is a small company founded by the adventurous,with a dream of having a jacket that is comfortable, durable, and can keep them dry and warm in any adventures to come</p>
+        <p>
+          RainyDays is a small company founded by the adventurous,with a dream of having a jacket that is comfortable, durable, and can keep them dry and warm
+          in any adventures to come
+        </p>
         <p>In RainyDays our motto is pushing the Comfort zone! We strive to make the best outdoor jackets for you.</p>
         <p>All our jackets are 100% waterproof</p>
         <p>Our Companys goal is that you can take one of our jackets, and head outside without giving the weather a tougth!</p>
