--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <header>
       <div class="header-top">
-        <a href="index.html" class="logo logo-header">Rainy days</a>
+        <a href="index.html" class="logo logo-header"><img src="images/RainyDays_Logo kopi.png" /></a>
         <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart fa-2x"></i></a>
         <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
         <input type="checkbox" id="hamburger-menu" />
