--- a/index.html
+++ b/index.html
@@ -9,30 +9,23 @@
     <link href="css/index.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-    <!-- Hotjar Tracking Code for https://elaborate-platypus-596ec8.netlify.app/index.html -->
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 3252744, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
     <title>RainyDays | Homepage</title>
   </head>
   <body>
     <header>
       <div class="header-top">
-        <a href="index.html" class="logo logo-header"><img src="images/RainyDays_Logo kopi.png" /></a>
+        <a href="index.html" class="logo logo-header">Rainy Days</a>
+        <div class="social-media">
+          <h2>Follow us:</h2>
+          <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x facebook"></i></a>
+          <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
+        </div>
+      </div>
+      <div class="header-bottom">
         <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart fa-2x"></i></a>
         <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
         <input type="checkbox" id="hamburger-menu" />
@@ -42,22 +35,6 @@
           <a href="contact.html">Contact us</a>
           <a href="about.html">About us</a>
         </nav>
-      </div>
-      <div class="header-bottom">
-        <div class="search-bar">
-          <label for="search-icon"> <i class="fas fa-search fa-2x search-icon"></i></label>
-          <input type="checkbox" id="search-icon" />
-          <form method="post" class="search">
-            <input type="search" id="site-search" name="search" class="search-box" aria-label="search trough site content" />
-            <button class="search-button">Search</button>
-          </form>
-        </div>
-        <div class="social-media">
-          <h2>Follow us:</h2>
-          <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x facebook"></i></a>
-          <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
-          <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
-        </div>
       </div>
     </header>
     <main>
