updating home page

--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
   <body>
     <header>
       <div class="header-top">
-        <a href="index.html" class="logo logo-header">Rainy Days</a>
-        <div class="social-media">
-          <h2>Follow us:</h2>
-          <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x facebook"></i></a>
-          <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
-          <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
+        <div class="header-top_container">
+          <a href="index.html" class="logo logo-header">Rainy Days</a>
+          <div class="social-media">
+            <h2>Follow us:</h2>
+            <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.twitter.com"><i class="fab fa-twitter-square"></i></a>
+          </div>
         </div>
       </div>
       <div class="header-bottom">
-        <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart fa-2x"></i></a>
+        <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart"></i></a>
         <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
@@ -39,29 +41,39 @@
     </header>
     <main>
       <section class="intro">
-        <div class="intro__content">
-          <a href="index.html" class="logo logo-intro">Rainy days</a>
-          <h2>The Rainy season is here! Order a jacket now and get free shipping</h2>
-          <a href="collection.html" class="cta"> view collection</a>
+        <div class="intro_content-container">
+          <div class="intro_content">
+            <a href="index.html" class="logo logo-intro">Rainy days</a>
+            <h1>The Rainy season is here! Order a jacket now and get free shipping</h1>
+            <a href="collection.html" class="cta"> view collection</a>
+          </div>
         </div>
       </section>
       <section class="home-featured">
         <div class="featured">
-          <a href="products/offpist.html">
-            <h2>the offpist jacket is here</h2>
-            <img src="images/brown-jacket-product.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
-            <p>Offpist jacket</p>
-            <p>99 eur</p>
-          </a>
+          <h2>The offpist jacket is here</h2>
+          <div class="product-container">
+            <a href="products/offpist.html">
+              <img src="images/brown-jacket-product.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
+              <div class="product-container_text">
+                <p>Offpist jacket</p>
+                <p>99 eur</p>
+              </div>
+            </a>
+          </div>
         </div>
         <div class="waterproof">
-          <img src="images/texture.jpg" class="waterproof__img" alt="texture picture of a waterproof rainy days jacket" />
-          <h2>100% waterproof</h2>
-          <p>
-            All Our RainyDays jackets comes with a <span class="bold-text">100% waterproof</span> warranty! So you can be comfortable and focus on enjoying your
-            adventures
-          </p>
-          <a href="collection.html" class="cta"> view collection</a>
+          <div class="waterproof_container">
+            <img src="images/texture.jpg" class="waterproof__img" alt="texture picture of a waterproof rainy days jacket" />
+            <div class="waterproof-text">
+              <h2>100% waterproof</h2>
+              <p>
+                All Our RainyDays jackets comes with a <span class="bold-text">100% waterproof</span> warranty! So you can be comfortable and focus on enjoying
+                your adventures
+              </p>
+              <a href="collection.html" class="cta"> view collection</a>
+            </div>
+          </div>
         </div>
       </section>
     </main>
