finished home page design changes

--- a/collection.html
+++ b/collection.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="View our collection of comfortable rain jackets" />
+    <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/collection.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <!-- Hotjar Tracking Code for https://elaborate-platypus-596ec8.netlify.app/index.html -->
     <script>
       (function (h, o, t, j, a, r) {
@@ -32,32 +33,26 @@
   <body>
     <header>
       <div class="header-top">
-        <a href="index.html" class="logo logo-header">Rainy days</a>
-        <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart fa-2x"></i></a>
-        <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
+        <div class="header-top_container">
+          <a href="index.html" class="logo logo-header">Rainy Days</a>
+          <div class="social-media">
+            <h2>Follow us:</h2>
+            <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.twitter.com"><i class="fab fa-twitter-square"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="header-bottom">
+        <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart"></i></a>
+        <label for="hamburger-menu"><i class="fas fa-bars hamburger-btn"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
-          <a href="index.html">Home</a>
-          <a href="collection.html" class="current">Collection</a>
+          <a href="index.html" class="current">Home</a>
+          <a href="collection.html">Collection</a>
           <a href="contact.html">Contact us</a>
           <a href="about.html">About us</a>
         </nav>
-      </div>
-      <div class="header-bottom">
-        <div class="search-bar">
-          <label for="search-icon"> <i class="fas fa-search fa-2x search-icon"></i></label>
-          <input type="checkbox" id="search-icon" />
-          <form method="post" class="search">
-            <input type="search" id="site-search" name="search" class="search-box border" aria-label="search trough site content" />
-            <button class="search-button">Search</button>
-          </form>
-        </div>
-        <div class="social-media">
-          <h2>Follow us:</h2>
-          <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x facebook"></i></a>
-          <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
-          <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
-        </div>
       </div>
     </header>
     <main>
