--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="get comfortable with the rain jackets at RainyDays" />
-    <link href="css/styles.css" rel="stylesheet" />
-    <link href="css/index.css" rel="stylesheet" />
-    <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
     <title>RainyDays | Homepage</title>
   </head>
   <body>
@@ -29,7 +29,7 @@
       </div>
       <div class="header-bottom">
         <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart"></i></a>
-        <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
+        <label for="hamburger-menu"><i class="fas fa-bars hamburger-btn"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
           <a href="index.html" class="current">Home</a>
