--- a/collection.html
+++ b/collection.html
@@ -12,6 +12,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/collection.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
+    <script type="module" src="js/collection.js"></script>
     <!-- Hotjar Tracking Code for https://elaborate-platypus-596ec8.netlify.app/index.html -->
     <script>
       (function (h, o, t, j, a, r) {
@@ -64,50 +65,7 @@
             <span class="bold-text">comfortable,durable and dry</span>. so you can focus on yourself, and not the weather!
           </p>
         </div>
-        <section class="products">
-          <div class="featured featured__products">
-            <a href="products/offpist.html">
-              <img src="images/brown-jacket-product.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
-              <h2>Offpist jacket</h2>
-              <p>99 eur</p>
-            </a>
-          </div>
-          <div class="featured featured__products">
-            <a href="products/offpist.html">
-              <img src="images/mountain-jacket.jpg" class="featured__img" alt="woman wearing the mountain jacket outside" />
-              <h2>mountain jacket</h2>
-              <p>99 eur</p>
-            </a>
-          </div>
-          <div class="featured featured__products">
-            <a href="products/offpist.html">
-              <img src="images/winter.jacket.jpg" class="featured__img" alt="woman wearing the winter jacket outside in the snow" />
-              <h2>winter jacket</h2>
-              <p>99 eur</p>
-            </a>
-          </div>
-          <div class="featured featured__products">
-            <a href="products/offpist.html">
-              <img src="images/light-jacket.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
-              <h2>light jacket</h2>
-              <p>99 eur</p>
-            </a>
-          </div>
-          <div class="featured featured__products">
-            <a href="products/offpist.html">
-              <img src="images/yellow-jacket-jpg.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
-              <h2>urban jacket</h2>
-              <p>99 eur</p>
-            </a>
-          </div>
-          <div class="featured featured__products">
-            <a href="products/offpist.html">
-              <img src="images/kids-jacket.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
-              <h2>kids jacket</h2>
-              <p>49 eur</p>
-            </a>
-          </div>
-        </section>
+        <section class="products"></section>
       </section>
     </main>
     <footer>copyright &copy;</footer>
