--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
+    <script type="module" src="js/index.js"></script>
     <title>RainyDays | Homepage</title>
   </head>
   <body>
@@ -52,15 +53,7 @@
       <section class="home-featured">
         <div class="featured">
           <h2>The offpist jacket is here</h2>
-          <div class="product-container">
-            <a href="products/offpist.html">
-              <img src="images/brown-jacket-product.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
-              <div class="product-container_text">
-                <p>Offpist jacket</p>
-                <p>99 eur</p>
-              </div>
-            </a>
-          </div>
+          <div class="product-container"></div>
         </div>
         <div class="waterproof">
           <div class="waterproof_container">
