--- a/products/offpist.html
+++ b/products/offpist.html
@@ -46,16 +46,16 @@
     </header>
     <main class="product-specific content-square">
        <section>
-        <img src="../images/brown-jacket-square.jpg" alt="man wearing the offpist jacket outside" />
+        <img src="../images/offpist-jacket.png" alt="man wearing the offpist jacket outside" />
         <div class="product-image_thumbnails">
           <div>
-            <img src="../images/brown-jacket-square.jpg" alt="man wearing the offpist jacket outside" />
+            <img src="../images/offpist-jacket.png" alt="man wearing the offpist jacket outside" />
           </div>
           <div>
-            <img src="../images/brown-jacket-square.jpg" alt="man wearing the offpist jacket outside" />
+            <img src="../images/offpist-jacket.png" alt="man wearing the offpist jacket outside" />
           </div>
           <div>
-            <img src="../images/brown-jacket-square.jpg" alt="man wearing the offpist jacket outside" />
+            <img src="../images/offpist-jacket.png" alt="man wearing the offpist jacket outside" />
           </div>
        </section>
         <section class="product-specific__details">
