--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -32,32 +32,26 @@
   <body>
     <header>
       <div class="header-top">
-        <a href="index.html" class="logo logo-header">Rainy days</a>
-        <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart fa-2x"></i></a>
-        <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
+        <div class="header-top_container">
+          <a href="index.html" class="logo logo-header">Rainy Days</a>
+          <div class="social-media">
+            <h2>Follow us:</h2>
+            <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.twitter.com"><i class="fab fa-twitter-square"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="header-bottom">
+        <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart"></i></a>
+        <label for="hamburger-menu"><i class="fas fa-bars hamburger-btn"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
-          <a href="index.html">Home</a>
+          <a href="index.html" class="current">Home</a>
           <a href="collection.html">Collection</a>
           <a href="contact.html">Contact us</a>
           <a href="about.html">About us</a>
         </nav>
-      </div>
-      <div class="header-bottom">
-        <div class="search-bar">
-          <label for="search-icon"> <i class="fas fa-search fa-2x search-icon"></i></label>
-          <input type="checkbox" id="search-icon" />
-          <form method="post" class="search">
-            <input type="search" id="site-search" name="search" class="search-box border" aria-label="search trough site content" />
-            <button class="search-button">Search</button>
-          </form>
-        </div>
-        <div class="social-media">
-          <h2>Follow us:</h2>
-          <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x facebook"></i></a>
-          <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
-          <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
-        </div>
       </div>
     </header>
     <main>
@@ -68,7 +62,7 @@
       <section class="shoppingcart-content content-square">
         <div class="shoppingcart-content__product">
           <div>
-            <img src="images/brown-jacket-square.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
+            <img src="images/offpist-jacket.png" class="featured__img" alt="man wearing the offpistjacket outside" />
           </div>
           <div>
             <h2>Offpist jacket</h2>
@@ -76,15 +70,6 @@
           </div>
         </div>
         <form method="POST" class="form">
-          <div>
-            <p>size:</p>
-            <select name="size">
-              <option value="size small">Small</option>
-              <option value="size medium">Medium</option>
-              <option value="size large">Large</option>
-              <option value="size extra large">Extra large</option>
-            </select>
-          </div>
           <div>
             <p>quantity:</p>
             <select name="quantity">
