--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="View your shopping cart at Rainy Days" />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/shoppingcart.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <script type="module" src="js/shoppingcart.js"></script>
+
     <!-- Hotjar Tracking Code for https://elaborate-platypus-596ec8.netlify.app/index.html -->
-    <script>
+    <!-- <script>
       (function (h, o, t, j, a, r) {
         h.hj =
           h.hj ||
@@ -26,7 +28,7 @@
         r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
         a.appendChild(r);
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
+    </script> -->
     <title>RainyDays | Shopping cart</title>
   </head>
   <body>
@@ -60,31 +62,8 @@
         <h1>your shopping cart</h1>
       </div>
       <section class="shoppingcart-content content-square">
-        <div class="shoppingcart-content__product">
-          <div>
-            <img src="images/offpist-jacket.png" class="featured__img" alt="man wearing the offpistjacket outside" />
-          </div>
-          <div>
-            <h2>Offpist jacket</h2>
-            <p>99 eur</p>
-          </div>
-        </div>
-        <form method="POST" class="form">
-          <div>
-            <p>quantity:</p>
-            <select name="quantity">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-            </select>
-          </div>
-        </form>
-        <div class="remove">
-          <p>remove</p>
-          <i class="fas fa-trash-alt blue-i fa-2x trashcan"></i>
-        </div>
+        <div class="shoppingcart-content__product"></div>
+
         <div class="shipment-info">
           <p>Shippment: 3-5 working days</p>
           <p>Payment: An innvoice will be delivered</p>
