--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script type="module" src="js/index.js"></script>
+    <script defer type="module" src="js/index.js"></script>
     <title>RainyDays | Homepage</title>
   </head>
   <body>
