--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -11,7 +11,7 @@
     <link href="css/shoppingcart.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
-    <script type="module" src="js/shoppingcart.js"></script>
+    <script defer type="module" src="js/shoppingcart.js"></script>
 
     <!-- Hotjar Tracking Code for https://elaborate-platypus-596ec8.netlify.app/index.html -->
     <!-- <script>
