--- a/collection.html
+++ b/collection.html
@@ -12,7 +12,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/collection.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script type="module" src="js/collection.js" defer></script>
+    <script type="module" src="js/collection.js"></script>
     <!-- Hotjar Tracking Code for https://elaborate-platypus-596ec8.netlify.app/index.html -->
     <script>
       (function (h, o, t, j, a, r) {
