--- a/details.html
+++ b/details.html
@@ -12,7 +12,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/details.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script type="module" src="js/details.js" defer></script>
+    <script type="module" src="js/details.js"></script>
     <title>hello</title>
   </head>
   <body>
