--- a/details.html
+++ b/details.html
@@ -12,7 +12,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/details.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script type="module" src="js/details.js" defer></script>
+    <script defer type="module" src="js/details.js" defer></script>
     <title>hello</title>
   </head>
   <body>
@@ -29,7 +29,10 @@
         </div>
       </div>
       <div class="header-bottom">
-        <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart"></i></a>
+        <div class="shopping-cart">
+          <a href="shoppingcart.html"><i class="fas fa-shopping-cart cart-symbol"></i></a>
+          <div class="cart-amount">0</div>
+        </div>
         <label for="hamburger-menu"><i class="fas fa-bars hamburger-btn"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
@@ -42,11 +45,7 @@
     </header>
     <main>
       <section class="product-specific"></section>
-      <div class="cart content-square">
-        <h2>added to cart!</h2>
-        <a href="../collection.html" class="cta">shop more</a>
-        <a href="../checkout.html" class="cta">checkout</a>
-      </div>
+      <div class="cart content-square"></div>
     </main>
     <footer>copyright &copy;</footer>
   </body>
