--- a/purchase-complete.html
+++ b/purchase-complete.html
@@ -5,59 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="View your purchase at RainyDays" />
+    <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/purchase-complete.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-    <!-- Hotjar Tracking Code for https://elaborate-platypus-596ec8.netlify.app/index.html -->
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 3252744, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
-    <title>RainyDays | Purchase completed</title>
+    <script defer type="module" src="js/purchasecompleted.js"></script>
+    <title>RainyDays | Homepage</title>
   </head>
   <body>
     <header>
       <div class="header-top">
-        <a href="index.html" class="logo logo-header">Rainy days</a>
-        <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart fa-2x"></i></a>
-        <label for="hamburger-menu"><i class="fas fa-bars fa-2x"></i></label>
+        <div class="header-top_container">
+          <a href="index.html" class="logo logo-header">Rainy Days</a>
+          <div class="social-media">
+            <h2>Follow us:</h2>
+            <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.twitter.com"><i class="fab fa-twitter-square"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="header-bottom">
+        <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart"></i></a>
+        <label for="hamburger-menu"><i class="fas fa-bars hamburger-btn"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
-          <a href="index.html">Home</a>
+          <a href="index.html" class="current">Home</a>
           <a href="collection.html">Collection</a>
           <a href="contact.html">Contact us</a>
           <a href="about.html">About us</a>
         </nav>
-      </div>
-      <div class="header-bottom">
-        <div class="search-bar">
-          <label for="search-icon"> <i class="fas fa-search fa-2x search-icon"></i></label>
-          <input type="checkbox" id="search-icon" />
-          <form method="post" class="search">
-            <input type="search" id="site-search" name="search" class="search-box border" aria-label="search trough site content" />
-            <button class="search-button">Search</button>
-          </form>
-        </div>
-        <div class="social-media">
-          <h2>Follow us:</h2>
-          <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x facebook"></i></a>
-          <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
-          <a href="https://www.twitter.com"><i class="fab fa-twitter-square fa-2x"></i></a>
-        </div>
       </div>
     </header>
     <main>
@@ -65,53 +45,32 @@
         <h1>thank you for your purchase!</h1>
         <i class="fas fa-truck fa-2x"></i>
       </div>
-      <section class="checkout">
-        <section class="content-square">
-          <p>Your order <span class="bold-text">00001</span> is pending</p>
+      <section class="shoppingcart-content content-square reciet">
+        <div class="purchase-message">
+          <p>Your order is pending</p>
+          <p>A recite has been sent to your email address</p>
           <p>Order date:17.02.2021</p>
-          <p class="bold-text">Shipping adress:</p>
-          <p>Lars Hansen</p>
-          <p>Omlevegen 31</p>
-          <p>8661 Mosjøen</p>
-          <p>Norway</p>
-          <p class="bold-text">Billing adress:</p>
-          <p>Lars Hansen</p>
-          <p>Omlevegen 31</p>
-          <p>8661 Mosjøen</p>
-          <p>Norway</p>
-        </section>
-        <section class="shoppingcart-content content-square reciet">
-          <div class="shoppingcart-content__product">
-            <div>
-              <img src="images/brown-jacket-square.jpg" class="featured__img" alt="man wearing the offpistjacket outside" />
+        </div>
+        <div class="shoppingcart-content__product"></div>
+        <section>
+          <div class="shipment-info">
+            <p>Shippment: 3-5 working days</p>
+            <p>Payment: An innvoice will be delivered via email</p>
+          </div>
+          <div class="cost">
+            <div class="cost-info">
+              <p>Sub total:</p>
+              <p class="sub-price">99 eur</pclass>
             </div>
-            <div>
-              <h2>Offpist jacket</h2>
-              <p>99 eur</p>
-              <p>Size:medium</p>
-              <p>quantity:1</p>
+            <div class="cost-info">
+              <p>Shipping:</p>
+              <p class="shipping-price">0 eur</p>
+            </div>
+            <div class="cost-info">
+              <p>Grand total:</p>
+              <p class="total-price">99 eur</p>
             </div>
           </div>
-          <section>
-            <div class="shipment-info">
-              <p>Shippment: 3-5 working days</p>
-              <p>Payment: An innvoice will be delivered</p>
-            </div>
-            <div class="cost">
-              <div class="cost-info">
-                <p>Sub total:</p>
-                <p>99 eur</p>
-              </div>
-              <div class="cost-info">
-                <p>Shipping:</p>
-                <p>0 eur</p>
-              </div>
-              <div class="cost-info">
-                <p>Grand total:</p>
-                <p>99 eur</p>
-              </div>
-            </div>
-          </section>
         </section>
       </section>
     </main>
