--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -13,7 +13,7 @@
     <link href="css/shoppingcart.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script defer type="module" src="js/shoppingcart.js"></script>
-    <title>RainyDays | Homepage</title>
+    <title>RainyDays | Shopping cart</title>
   </head>
   <body>
     <header>
@@ -29,7 +29,6 @@
         </div>
       </div>
       <div class="header-bottom">
-        <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart"></i></a>
         <label for="hamburger-menu"><i class="fas fa-bars hamburger-btn"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
@@ -38,6 +37,10 @@
           <a href="contact.html">Contact us</a>
           <a href="about.html">About us</a>
         </nav>
+        <div class="shopping-cart">
+          <a href="shoppingcart.html"><i class="fas fa-shopping-cart cart-symbol"></i></a>
+          <div class="cart-amount">0</div>
+        </div>
       </div>
     </header>
     <main>
