--- a/collection.html
+++ b/collection.html
@@ -13,22 +13,6 @@
     <link href="css/collection.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script type="module" src="js/collection.js" defer></script>
-    <!-- Hotjar Tracking Code for https://elaborate-platypus-596ec8.netlify.app/index.html -->
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 3252744, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
     <title>RainyDays | Collection</title>
   </head>
   <body>
@@ -45,7 +29,6 @@
         </div>
       </div>
       <div class="header-bottom">
-        <a href="shoppingcart.html" class="shopping-cart"><i class="fas fa-shopping-cart"></i></a>
         <label for="hamburger-menu"><i class="fas fa-bars hamburger-btn"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
@@ -54,6 +37,10 @@
           <a href="contact.html">Contact us</a>
           <a href="about.html">About us</a>
         </nav>
+        <div class="shopping-cart">
+          <a href="shoppingcart.html"><i class="fas fa-shopping-cart cart-symbol"></i></a>
+          <div class="cart-amount">0</div>
+        </div>
       </div>
     </header>
     <main>
