--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,6 @@
         </div>
       </div>
       <div class="header-bottom">
-        <div class="shopping-cart">
-          <a href="shoppingcart.html"><i class="fas fa-shopping-cart cart-symbol"></i></a>
-          <div class="cart-amount">0</div>
-        </div>
         <label for="hamburger-menu"><i class="fas fa-bars hamburger-btn"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
@@ -41,6 +37,10 @@
           <a href="contact.html">Contact us</a>
           <a href="about.html">About us</a>
         </nav>
+        <div class="shopping-cart">
+          <a href="shoppingcart.html"><i class="fas fa-shopping-cart cart-symbol"></i></a>
+          <div class="cart-amount">0</div>
+        </div>
       </div>
     </header>
     <main>
@@ -51,9 +51,15 @@
         <div class="message">
           <h2>Send us a direct message!</h2>
           <form method="post">
-            <label for="email">Your email</label>
+            <div class="form-div">
+              <label for="email">E-mail</label>
+              <div class="form-error" id="email-error">Please enter your email address</div>
+            </div>
             <input type="email" id="email" name="email" required />
-            <label for="message">Your message</label>
+            <div class="form-div">
+              <label for="message">Your message</label>
+              <div class="form-error" id="message-error">Please enter your message</div>
+            </div>
             <textarea id="message" name="message"></textarea>
             <input type="submit" value="send" class="cta cta-form" />
           </form>
