cleaned up my js

--- a/collection.html
+++ b/collection.html
@@ -52,6 +52,7 @@
             <span class="bold-text">comfortable,durable and dry</span>. so you can focus on yourself, and not the weather!
           </p>
         </div>
+        <div class="spinner"></div>
         <section class="products"></section>
       </section>
     </main>
