added render function for collection.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <section class="home-featured">
         <div class="featured">
           <h2>The offpist jacket is here</h2>
-          <div class="product-container"></div>
+          <div class="spinner"></div>
         </div>
         <div class="waterproof">
           <div class="waterproof_container">
