updatet js and css
added renered function to details page.

added adjustments to home page styling

--- a/details.html
+++ b/details.html
@@ -44,7 +44,9 @@
       </div>
     </header>
     <main>
-      <section class="product-specific"></section>
+      <section class="product-specific">
+        <div class="spinner"></div>
+      </section>
       <div class="cart content-square"></div>
     </main>
     <footer>copyright &copy;</footer>
